Fixed background scaling on smaller size screens

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -9,6 +9,10 @@ html, body {
   height: 100%;
 }
 
+body {
+  background-image: url("../images/escheresque_edited.png");
+}
+
 h1, h2, h3, h4, h5 {
   font-family: Georgia, 'Times New Roman';
   font-size: 2em;
@@ -72,7 +76,8 @@ h1, h2, h3, h4, h5 {
 .bg {
   background-image: url("../images/escheresque_edited.png");
   height: 100%;
-  background-position: center;
+  width: 100%;
+  display: inline-block;
 }
 
 .jumbotron {
@@ -87,6 +92,7 @@ h1, h2, h3, h4, h5 {
 
 .row {
   margin-right: 0;
+  margin-left: 0;
 }
 
 /*-- Index / About me --*/
@@ -96,7 +102,7 @@ h1, h2, h3, h4, h5 {
   border: 1px solid #191C23;
 }
 
-div.hr {
+.hr {
   margin-top: 3rem;
   margin-bottom: 20px;
   border: 0;
@@ -168,6 +174,12 @@ div.hr {
 .portfolio-link:hover .card-title-bg {
   text-decoration: none;
   background-color: rgba(111, 119, 125, 0.8);
+}
+
+
+.portfolio-link:active .card-title-bg {
+  text-decoration: none;
+  background-color: rgb(81, 87, 92);
 }
 
 /*-- Contact Page --*/
